--- a/djsr/package.json
+++ b/djsr/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
+    "babel-polyfill": "^6.26.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
